UCSFD8-889 fixed menu jumping on search icon hover

--- a/docroot/themes/custom/ucsf/assets/css/style.css
+++ b/docroot/themes/custom/ucsf/assets/css/style.css
@@ -1810,7 +1810,8 @@ a.icon-transit:hover {
     border-bottom: 4px solid #007cbe;
     padding-bottom: 0; }
   [block="block-ucsf-main-menu-desktop"] > .menu-item.search > a.is-active, [block="block-ucsf-main-menu-desktop"] > .menu-item.search > a:active, [block="block-ucsf-main-menu-desktop"] > .menu-item.search > a:hover {
-    border-bottom: 0; }
+    border-bottom: 4px solid #007cbe;
+    padding-bottom: 0; }
   [block="block-ucsf-main-menu-desktop"] > .menu-item:first-child > a {
     margin-left: 0; }
 
