--- a/docroot/themes/custom/ucsf/scss/navigation/_main-menu.scss
+++ b/docroot/themes/custom/ucsf/scss/navigation/_main-menu.scss
@@ -263,7 +263,8 @@ header .menu--main {
     &.is-active,
     &:active,
     &:hover {
-      border-bottom: 0;
+      border-bottom: $hover-border-size solid $blue;
+      padding-bottom: 0;
     }
   }
   /*
